force-app/main/default/objects/Feature_Name__c/Feature_Name__c.object-meta.xml
<CustomObject>
    <label>Feature_Label</label>
    <nameField>
        <label>Feature_Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features_Label</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>