force-app/main/default/objects/Feature_Name__c/fields/Descriptions_Label__c.field-meta.xml
<CustomField>
    <fullName>Descriptions_Label__c</fullName>
    <label>Description_Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>