force-app/main/default/objects/Feature_Name__c/fields/PicklistForMirrorFormula__c.field-meta.xml
<CustomField>
    <fullName>PicklistForMirrorFormula__c</fullName>
    <label>PicklistForMirrorFormula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>