force-app/main/default/objects/Feature_Name__c/fields/Project_Global_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Global_Name__c</fullName>
    <description>Project</description>
    <label>Project_Global_Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_BugPriority</valueSetName>
    </valueSet>
</CustomField>