force-app/main/default/objects/Feature_Name__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Panaya On Going</description>
    <label>Project_Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Start_API</fullName>
                <label>Start_label1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>