force-app/main/default/objects/Feature_Name__c/fields/Titles_Label__c.field-meta.xml
<CustomField>
    <fullName>Titles_Label__c</fullName>
    <label>Title_Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>