force-app/main/default/objects/Feature_Name__c/fields/UpdateMe_API__c.field-meta.xml
<CustomField>
    <fullName>UpdateMe_API__c</fullName>
    <description>&quot; and &quot;abc&quot; as duplicate values (</description>
    <label>UpdateMe_Label</label>
    <length>200</length>
    <type>Text</type>
</CustomField>